Models added, JSON changed, Startup fixed

--- a/habitsApp/appsettings.json
+++ b/habitsApp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MainConnection": "DataSource=Tasks.sqlite"
+  }
 }
